<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yangchedou.lib_common.Weight.XlTitle
        android:id="@+id/order_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.yangchedou.lib_common.Weight.XlTitle>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:background="@color/colorWhite"
        app:tabContentStart="50dp"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextColor="#666666">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daiqueren"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daifuwu"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yiwancheng"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yiguanbi"/>

    </android.support.design.widget.TabLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/dialogbg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="@dimen/size_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shuliang"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_14"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_count"
            android:layout_width="@dimen/size_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0"
            android:textSize="@dimen/text_14"
            android:textColor="@color/colorOrgian"
            android:gravity="center_vertical|left"/>
        <View
            android:layout_width="@dimen/size_1"
            android:layout_height="match_parent"
            android:background="@color/dialogbg"/>
        <TextView
            android:layout_width="@dimen/size_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zongjia"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_14"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="@dimen/size_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0.0"
            android:textSize="@dimen/text_14"
            android:textColor="@color/colorOrgian"
            android:gravity="center_vertical|left"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/dialogbg"/>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/ordermanager_sfl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/maintiandetial_title">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:id="@+id/maintiandetial_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAccentColor="@android:color/white"
            app:srlPrimaryColor="@color/bottom_icon"
            app:srlTextSizeTitle="16sp"
            app:srlTextSizeTime="10dp"
            app:srlTextTimeMarginTop="2dp"
            app:srlEnableLastTime="true"
            app:srlFinishDuration="500"
            app:srlDrawableSize="20dp"
            app:srlDrawableArrowSize="20dp"
            app:srlDrawableProgressSize="20dp"
            app:srlDrawableMarginRight="20dp"
            app:srlClassicsSpinnerStyle="Scale">

        </com.scwang.smartrefresh.layout.header.ClassicsHeader>
        <!--<com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:id="@+id/maintiandetial_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAccentColor="@android:color/white"
            app:srlPrimaryColor="@color/bottom_icon"
            app:srlTextSizeTitle="16sp"
            app:srlTextSizeTime="10dp"
            app:srlTextTimeMarginTop="2dp"
            app:srlEnableLastTime="true"
            app:srlFinishDuration="500"
            app:srlDrawableSize="20dp"
            app:srlDrawableArrowSize="20dp"
            app:srlDrawableProgressSize="20dp"
            app:srlDrawableMarginRight="20dp"
            app:srlClassicsSpinnerStyle="Scale"/>-->
    <!--<android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">
    </android.support.v7.widget.RecyclerView>-->

    <com.yangchedou.lib_common.XLRecyclerView.RefreshRecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

    </com.yangchedou.lib_common.XLRecyclerView.RefreshRecyclerView>

</com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>