<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
        <com.yangchedou.lib_common.Weight.XlTitle
            android:id="@+id/maintiandetial_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            app:layout_constraintTop_toTopOf="parent">

        </com.yangchedou.lib_common.Weight.XlTitle>
        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/maintiandetial_sfl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/maintiandetial_title">

                <com.scwang.smartrefresh.layout.header.ClassicsHeader
                    android:id="@+id/maintiandetial_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srlAccentColor="@android:color/white"
                    app:srlPrimaryColor="@color/bottom_icon"
                    app:srlTextSizeTitle="16sp"
                    app:srlTextSizeTime="10dp"
                    app:srlTextTimeMarginTop="2dp"
                    app:srlEnableLastTime="true"
                    app:srlFinishDuration="500"
                    app:srlDrawableSize="20dp"
                    app:srlDrawableArrowSize="20dp"
                    app:srlDrawableProgressSize="20dp"
                    app:srlDrawableMarginRight="20dp"
                    app:srlClassicsSpinnerStyle="Scale"/>


        <ScrollView
            android:id="@+id/maintiandetial_sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/maintiandetial_sfl"
            >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_10"
                    android:orientation="vertical">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                                <ImageView
                                    android:id="@+id/maintiandetial_iv_photo"
                                    android:layout_width="@dimen/size_80"
                                    android:layout_height="@dimen/size_80"
                                    android:layout_margin="@dimen/size_10"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    android:background="@drawable/ic_cross_24dp"
                                    />

                                <TextView
                                    android:id="@+id/maintiandetial_tv_nickname"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/nicheng"
                                    style="@style/normalText"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_iv_photo"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    android:layout_margin="@dimen/size_10"/>

                                <TextView
                                    android:id="@+id/maintiandetial_tv_fwxm"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/fuwuxiangmu"
                                    style="@style/normalText"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_tv_nickname"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    android:layout_margin="@dimen/size_10"/>

                                <TextView
                                    android:id="@+id/maintiandetial_tv_ddje"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/dingdanjine"
                                    style="@style/normalText"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_tv_fwxm"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    android:layout_margin="@dimen/size_10"/>

                                <View
                                    android:id="@+id/maintiandetial_v1"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/size_5"
                                    android:background="@color/colorGrey"
                                    android:layout_marginTop="@dimen/size_10"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_tv_ddje"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"/>


                                <TextView
                                    android:id="@+id/maintiandetial_tv_cx"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/chexing"
                                    style="@style/normalText"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_v1"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    android:layout_margin="@dimen/size_10"/>

                                <TextView
                                    android:id="@+id/maintiandetial_tv_khdh"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/kehudianhua"
                                    style="@style/normalText"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_tv_cx"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    android:layout_margin="@dimen/size_10"/>

                                <TextView
                                    android:id="@+id/maintiandetial_tv_xdsj"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/xiadanshijian"
                                    style="@style/normalText"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_tv_khdh"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    android:layout_margin="@dimen/size_10"/>

                                <TextView
                                    android:id="@+id/maintiandetial_tv_ddbh"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/dingdanhianhao"
                                    style="@style/normalText"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_tv_xdsj"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    android:layout_margin="@dimen/size_10"/>


                                <View
                                    android:id="@+id/maintiandetial_v2"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/size_5"
                                    android:background="@color/colorGrey"
                                    android:layout_marginTop="@dimen/size_10"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_tv_ddbh"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    />

                                <TextView
                                    android:id="@+id/maintiandetial_tv_fwxm_title"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/size_40"
                                    android:text="@string/fuwuxiangmu"
                                    android:textSize="@dimen/text_16"
                                    android:textColor="@color/colorBlack"
                                    android:gravity="center_vertical"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_v2"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    />

                                <View
                                    android:id="@+id/maintiandetial_v3"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/size_5"
                                    android:background="@color/colorGrey"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_tv_fwxm_title"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    />

                                <TextView
                                    android:id="@+id/maintiandetial_tv_xm"
                                    android:layout_width="0dp"
                                    android:layout_height="@dimen/size_30"
                                    android:background="@color/colorGrey"
                                    android:layout_margin="@dimen/size_5"
                                    android:text="@string/xiangmu"
                                    android:gravity="center"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="@dimen/text_16"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_v3"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toLeftOf="@id/maintiandetial_tv_sl"
                                    />

                                <TextView
                                    android:id="@+id/maintiandetial_tv_sl"
                                    android:layout_width="0dp"
                                    android:layout_height="@dimen/size_30"
                                    android:background="@color/colorGrey"
                                    android:layout_margin="@dimen/size_5"
                                    android:text="@string/shuliang1"
                                    android:gravity="center"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="@dimen/text_16"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_v3"
                                    app:layout_constraintLeft_toRightOf="@id/maintiandetial_tv_xm"
                                    app:layout_constraintRight_toLeftOf="@id/maintiandetial_tv_jg"
                                    />

                                <TextView
                                    android:id="@+id/maintiandetial_tv_jg"
                                    android:layout_width="0dp"
                                    android:layout_height="@dimen/size_30"
                                    android:background="@color/colorGrey"
                                    android:layout_margin="@dimen/size_5"
                                    android:text="@string/jiage"
                                    android:gravity="center"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="@dimen/text_16"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_v3"
                                    app:layout_constraintLeft_toRightOf="@id/maintiandetial_tv_sl"
                                    app:layout_constraintRight_toRightOf="parent"
                                    />

                                <TextView
                                    android:id="@+id/maintiandetial_tv_qxdd"
                                    android:layout_width="0dp"
                                    android:layout_height="@dimen/size_30"
                                    android:text="@string/quxiaodingdanyuanyin"
                                    style="@style/normalText"
                                    android:layout_margin="@dimen/size_5"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_tv_xm"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    />

                                <EditText
                                    android:id="@+id/maintiandetial_et_qxdd"
                                    android:layout_width="0dp"
                                    android:layout_height="@dimen/size_50"
                                    android:hint="@string/qingtianxiequxiaodingdandeyuanyin"
                                    android:textSize="@dimen/text_14"
                                    android:gravity="start"
                                    android:layout_marginTop="@dimen/size_5"
                                    app:layout_constraintTop_toTopOf="@id/maintiandetial_tv_qxdd"
                                    app:layout_constraintLeft_toRightOf="@id/maintiandetial_tv_qxdd"
                                    app:layout_constraintRight_toRightOf="parent"
                                    android:background="@drawable/et_bg"/>

                                <Button
                                    android:id="@+id/maintiandetial_btn_jsdd"
                                    android:layout_width="wrap_content"
                                    android:layout_height="@dimen/size_30"
                                    android:layout_marginTop="@dimen/size_10"
                                    android:background="@drawable/title_buttton_click"
                                    android:text="@string/jieshoudingdan"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/text_14"
                                    app:layout_constraintHorizontal_chainStyle="spread"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_et_qxdd"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toLeftOf="@id/maintiandetial_btn_qxdd"/>

                                <Button
                                    android:id="@+id/maintiandetial_btn_qxdd"
                                    android:layout_width="wrap_content"
                                    android:layout_height="@dimen/size_30"
                                    android:layout_marginTop="@dimen/size_10"
                                    android:background="@drawable/title_buttton_click"
                                    android:text="@string/quxiaodingdan"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/text_14"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_et_qxdd"
                                    app:layout_constraintRight_toRightOf="parent"
                                    app:layout_constraintLeft_toRightOf="@id/maintiandetial_btn_jsdd"/>

                                <com.github.mikephil.charting.charts.BarChart
                                    android:id="@+id/bar_chart"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/size_80"
                                    android:layout_marginTop="@dimen/size_20"
                                    android:background="@color/colorGreen"
                                    app:layout_constraintTop_toBottomOf="@id/maintiandetial_btn_qxdd"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    >

                                </com.github.mikephil.charting.charts.BarChart>

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/size_200"
                                    android:background="@color/colorPrimary"
                                    app:layout_constraintTop_toBottomOf="@id/bar_chart"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"/>

                        </android.support.constraint.ConstraintLayout>
                </LinearLayout>

        </ScrollView>
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</android.support.constraint.ConstraintLayout>