<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:layout_margin="@dimen/size_10">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_70"
        android:textSize="@dimen/text_12"
        android:textColor="@color/colorGrey"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_ddbh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dingdanbianhao"
        android:textSize="@dimen/text_14"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toTopOf="@id/parent"
        app:layout_constraintLeft_toLeftOf="@id/parent"/>

    <TextView
        android:id="@+id/content_ddbh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="111"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="@id/text_ddbh"
        app:layout_constraintEnd_toStartOf="@+id/content_pay_way"
        app:layout_constraintLeft_toRightOf="@id/text_ddbh"
        app:layout_constraintTop_toTopOf="@id/parent" /> "/>

    <TextView
        android:id="@+id/content_pay_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="333"
        android:textColor="@color/colorOrgian"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="@id/text_ddbh"
        app:layout_constraintRight_toRightOf="@id/parent"
        app:layout_constraintLeft_toRightOf="@id/content_ddbh"
        app:layout_constraintTop_toTopOf="@id/parent" />

    <TextView
        android:id="@+id/content_pay_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="222"
        android:textColor="@color/colorOrgian"
        android:textSize="@dimen/text_14"
        android:layout_marginRight="@dimen/size_20"
        app:layout_constraintBottom_toBottomOf="@id/text_ddbh"
        app:layout_constraintRight_toLeftOf="@+id/content_pay_state"
        app:layout_constraintTop_toTopOf="@id/parent" />

    <TextView
        android:id="@+id/text_fwnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuwuneirong"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_14"
        android:layout_marginTop="@dimen/size_10"
        app:layout_constraintLeft_toLeftOf="@id/parent"
        app:layout_constraintTop_toBottomOf="@id/text_ddbh"/>

    <TextView
        android:id="@+id/content_fwnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuwuneirong"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_14"
        app:layout_constraintLeft_toRightOf="@+id/text_fwnr"
        app:layout_constraintTop_toTopOf="@+id/text_fwnr" />

    <ImageView
        android:id="@+id/image_phone"
        android:layout_width="@dimen/size_15"
        android:layout_height="@dimen/size_15"
        android:src="@mipmap/icon_dial2"
        android:layout_marginTop="@dimen/size_10"
        app:layout_constraintTop_toBottomOf="@id/text_fwnr"
        app:layout_constraintLeft_toLeftOf="@id/text_fwnr"/>

    <TextView
        android:id="@+id/content_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuwuneirong"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_14"
        app:layout_constraintLeft_toRightOf="@id/image_phone"
        app:layout_constraintTop_toTopOf="@id/image_phone"
        app:layout_constraintBottom_toBottomOf="@id/image_phone"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/text_ddje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dingdanjie"
        android:textSize="@dimen/text_14"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@id/parent"
        app:layout_constraintTop_toBottomOf="@id/image_phone"
        android:layout_marginTop="@dimen/size_10"/>


    <TextView
        android:id="@+id/content_ddje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30"
        android:textSize="@dimen/text_14"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toRightOf="@id/text_ddje"
        app:layout_constraintTop_toBottomOf="@id/image_phone"
        android:layout_marginTop="@dimen/size_10"/>

    <TextView
        android:id="@+id/text_sjzfje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sjzfje"
        android:textSize="@dimen/text_14"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@id/parent"
        app:layout_constraintTop_toBottomOf="@id/text_ddje"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginBottom="@dimen/size_10"/>


    <TextView
        android:id="@+id/content_sjzfje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30"
        android:textSize="@dimen/text_14"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toRightOf="@id/text_sjzfje"
        app:layout_constraintTop_toBottomOf="@id/text_ddje"
        android:layout_marginTop="@dimen/size_10"/>

    <TextView
        android:id="@+id/content_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shezhi"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_14"
        app:layout_constraintRight_toRightOf="@id/parent"
        app:layout_constraintBottom_toBottomOf="@id/parent"
        android:layout_marginRight="@dimen/size_20"/>


    <ImageView
        android:id="@+id/image_toRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/arrow_right"
        app:layout_constraintRight_toRightOf="@id/parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/size_10"/>


</android.support.constraint.ConstraintLayout>